--- a/index.html
+++ b/index.html
@@ -1,2 +1,88 @@
-<center><h1><i>currently under construction</i></h1>
-hello@jennyhuang.me</center>
+<!DOCTYPE html>
+<html>
+	<head>
+		<meta charset="utf-8">
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="description" content="I'm Jenny Huang. I'm a Computer Science Student at Smith College.">
+	<meta name="author" content="Jenny Huang">
+
+	<title>Jenny Huang</title>
+
+	<!-- Custom styles for this template -->
+
+	<!-- Favicon -->
+	<link rel="icon" href="favicon.jpg">
+	
+	<!-- Bootstrap core CSS -->
+	<link href="assets/css/bootstrap.css" rel="stylesheet">
+
+	<!-- CSS -->
+	<link href="css/main.css" rel="stylesheet">
+	<link href="font-awesome/css/font-awesome.min.css" rel="stylesheet">
+
+	<!-- jQuery -->
+	<script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
+
+	<!-- Fonts -->
+	<link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Abel' rel='stylesheet' type='text/css'>
+
+	</head>
+
+	<body>
+
+		<div id="title">JENNY HUANG</div>
+		<div id="icons">
+        <a class="icon purple" href="mailto:hello@jennyhuang.me">
+        	<i class="fa fa-lg fa-envelope-o" aria-hidden="true"></i></a>
+        <a class="icon purple" href="http://linkedin.com/in/jennyhuang24">
+			<i class="fa fa-lg fa-linkedin-square" aria-hidden="true"></i></a>
+        <a class="icon purple" href="LINK">
+        	<i class="fa fa-lg fa-file-o" aria-hidden="true"></i></a>
+        </div>
+
+        <div id="section">
+			<h3>Hello World!</h3>
+
+			<div id="text">
+			I'm Jenny Huang! I'm a Computer Science student at <a href="https://www.smith.edu/">Smith College</a>. <br>I love coding, and am a total foodie. Feel free to send me an email about coding or food, or anything else!
+		</div>
+		</div>
+
+		<div id="section">
+			<h3>Work</h3>
+			<div id="text">
+			Student Consultant @ <a href="https://www.smith.edu/its/ets/media_hours.php">Smith College CMP</a><span class="year"> - 2014 ~ 2015, 2016</span><br>
+			Instructor @ <a href="https://www.idtech.com/">iD Tech Camps<a><span class="year"> - 2016</span><br>
+			Software Development Intern @ <a href="http://www.flashstarts.com/">Flashstarts</a><span class="year"> - 2015</span>
+		</div>
+		</div>
+
+		<div id="section">
+			<h3>Things I Do</h3>
+
+			<div id="text">
+			Student Ambassador @ <a href="http://alumnae.smith.edu/volunteer/volunteer/student-ambassador-program/">Smith College</a><span class="year"> - 2016</span><br>
+			Mentor @ <a href="https://www.smith.edu/aemes/about_peer.php">AEMES STEM Peer Mentoring</a><span class="year">- 2013 ~ 2015</span><br>
+			Tutor @ <a href="http://www.homeworkhouseholyoke.org/">Homework House</a><span class="year"> - 2013 ~ 2014</span>
+		</div>
+		</div>
+
+		<div id="section">
+			<h3>Honors</h3>
+
+			<div id="text">
+			Grace Hopper Scholar @ <a href="http://anitaborg.org/awards-grants/ghc-scholarship-grants/">Anita Borg Institute</a><span class="year"> - 2016</span><br>
+			1st Place of BEA App for Lifestyle @ <a href="http://hack.ust.hk/">USTHacks</a> <span class="year"> - 2016</span><br>
+			Semi-Finalist of President's Cup @ <a href="http://www.ust.hk/presidents_cup/introduction.html">HKUST</a><span class="year"> - 2016</span><br>
+			Scholar @ <a href="http://southcentralscholars.org/">South Central Scholars</a><span class="year"> - 2013 ~ 2016</span>
+			<br>
+		</div>
+		</div><br><br>
+
+
+	</body>
+
+</html>
