--- a/index.html
+++ b/index.html
@@ -32,14 +32,14 @@
 	</head>
 
 	<body>
-		<div id="photo"><img id="pic" src="https://huangjenny.github.io/JennyHuang.jpg"></div>
+		<img id="pic" src="https://huangjenny.github.io/websiteJennyHuang.jpg"></div>
 		<div id="title">JENNY HUANG</div>
 		<div id="icons">
         <a class="icon purple" href="mailto:hello@jennyhuang.me">
         	<i class="fa fa-lg fa-envelope-o" aria-hidden="true"></i></a>
         <a class="icon purple" href="http://linkedin.com/in/jennyhuang24">
 			<i class="fa fa-lg fa-linkedin-square" aria-hidden="true"></i></a>
-        <a class="icon purple" href="http://huangjenny.github.io/JennyHuang_Resume.pdf">
+        <a class="icon purple" href="http://huangjenny.github.io/website/JennyHuang_Resume.pdf">
         	<i class="fa fa-lg fa-file-o" aria-hidden="true"></i></a>
         </div>
 
@@ -47,7 +47,7 @@
 			<h3>Hello World!</h3>
 
 			<div id="text">
-			I'm Jenny Huang! I'm a Computer Science student at <a href="https://www.smith.edu/">Smith College</a>. <br>I love coding, and am a total foodie. Feel free to send me an email about coding or food, or anything else!
+			I'm Jenny Huang! I'm a Computer Science student at <a href="https://www.smith.edu/">Smith College</a>. <br>I love coding, and am a total foodie. Feel free to send me an email about coding, food, or anything else!
 		</div>
 		</div>
 
