--- a/index.html
+++ b/index.html
@@ -32,14 +32,14 @@
 	</head>
 
 	<body>
-
+		<div id="photo"><img id="pic" src="http://huangjenny.github.io/website/JennyHuang.jpg"></div>
 		<div id="title">JENNY HUANG</div>
 		<div id="icons">
         <a class="icon purple" href="mailto:hello@jennyhuang.me">
         	<i class="fa fa-lg fa-envelope-o" aria-hidden="true"></i></a>
         <a class="icon purple" href="http://linkedin.com/in/jennyhuang24">
 			<i class="fa fa-lg fa-linkedin-square" aria-hidden="true"></i></a>
-        <a class="icon purple" href="LINK">
+        <a class="icon purple" href="http://huangjenny.github.io/website/JennyHuang_Resume.pdf">
         	<i class="fa fa-lg fa-file-o" aria-hidden="true"></i></a>
         </div>
 
