--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<!-- Custom styles for this template -->
 
 	<!-- Favicon -->
-	<link rel="icon" href="favicon.jpg">
+	<link rel="icon" href="favicon.png">
 	
 	<!-- Bootstrap core CSS -->
 	<link href="assets/css/bootstrap.css" rel="stylesheet">
@@ -35,11 +35,11 @@
 		<div id="photo"><img id="pic" src="http://huangjenny.github.io/website/JennyHuang.jpg"></div>
 		<div id="title">JENNY HUANG</div>
 		<div id="icons">
-        <a class="icon purple" href="mailto:hello@jennyhuang.me">
+        <a class="icon" href="mailto:jnnyhng@gmail.com">
         	<i class="fa fa-lg fa-envelope-o" aria-hidden="true"></i></a>
-        <a class="icon purple" href="http://linkedin.com/in/jennyhuang24">
+        <a class="icon" href="http://linkedin.com/in/jennyhuang24">
 			<i class="fa fa-lg fa-linkedin-square" aria-hidden="true"></i></a>
-        <a class="icon purple" href="http://huangjenny.github.io/website/JennyHuang_Resume.pdf">
+        <a class="icon" href="http://huangjenny.github.io/website/JennyHuang_Resume.pdf">
         	<i class="fa fa-lg fa-file-o" aria-hidden="true"></i></a>
         </div>
 
@@ -47,16 +47,16 @@
 			<h3>Hello World!</h3>
 
 			<div id="text">
-			I'm Jenny Huang! I'm a Computer Science student at <a href="https://www.smith.edu/">Smith College</a>. <br>I love coding, and am a total foodie. Feel free to send me an email about coding or food, or anything else!
+			I'm Jenny Huang! I'm a Computer Science student at <a href="https://www.smith.edu/">Smith College</a>. <br>I love coding, and am a total foodie. Feel free to send me an email about coding, food, or anything else!
 		</div>
 		</div>
 
 		<div id="section">
 			<h3>Work</h3>
 			<div id="text">
-			Student Consultant @ <a href="https://www.smith.edu/its/ets/media_hours.php">Smith College CMP</a><span class="year"> - 2014 ~ 2015, 2016</span><br>
-			Instructor @ <a href="https://www.idtech.com/">iD Tech Camps<a><span class="year"> - 2016</span><br>
-			Software Development Intern @ <a href="http://www.flashstarts.com/">Flashstarts</a><span class="year"> - 2015</span>
+			<a href="https://www.smith.edu/its/ets/media.php">Smith College CMP</a> | Student Consultant<span class="year"> - 2014 ~ 2015, 2016</span><br>
+			<a href="https://www.idtech.com/">iD Tech Camps</a> | Instructor<span class="year"> - 2016</span><br>
+			<a href="http://flashstarts.tumblr.com/post/124860814840/meet-an-intern-jenny-huang">Flashstarts</a> | Software Development Intern<span class="year"> - 2015</span>
 		</div>
 		</div>
 
@@ -64,9 +64,9 @@
 			<h3>Things I Do</h3>
 
 			<div id="text">
-			Student Ambassador @ <a href="http://alumnae.smith.edu/volunteer/volunteer/student-ambassador-program/">Smith College</a><span class="year"> - 2016</span><br>
-			Mentor @ <a href="https://www.smith.edu/aemes/about_peer.php">AEMES STEM Peer Mentoring</a><span class="year">- 2013 ~ 2015</span><br>
-			Tutor @ <a href="http://www.homeworkhouseholyoke.org/">Homework House</a><span class="year"> - 2013 ~ 2014</span>
+			<a href="http://alumnae.smith.edu/volunteer/volunteer/student-ambassador-program/">Smith College</a> | Student Ambassador<span class="year"> - 2016</span><br>
+			<a href="https://www.smith.edu/aemes/about_peer.php">AEMES STEM Peer Mentoring</a> | Mentor<span class="year">- 2013 ~ 2015</span><br>
+			<a href="http://www.homeworkhouseholyoke.org/">Homework House</a>| Tutor<span class="year"> - 2013 ~ 2014</span>
 		</div>
 		</div>
 
@@ -74,10 +74,10 @@
 			<h3>Honors</h3>
 
 			<div id="text">
-			Grace Hopper Scholar @ <a href="http://anitaborg.org/awards-grants/ghc-scholarship-grants/">Anita Borg Institute</a><span class="year"> - 2016</span><br>
-			1st Place of BEA App for Lifestyle @ <a href="http://hack.ust.hk/">USTHacks</a> <span class="year"> - 2016</span><br>
-			Semi-Finalist of President's Cup @ <a href="http://www.ust.hk/presidents_cup/introduction.html">HKUST</a><span class="year"> - 2016</span><br>
-			Scholar @ <a href="http://southcentralscholars.org/">South Central Scholars</a><span class="year"> - 2013 ~ 2016</span>
+			<a href="http://ghc.anitaborg.org/2016-student-academic/scholarships/2016-ghc-scholars/attachment/jenny-huang/">Anita Borg Institute</a> | Grace Hopper Scholar<span class="year"> - 2016</span><br>
+			<a href="http://hack.ust.hk/hack2016/index.html">USTHacks</a> | 1st Place of BEA App for Lifestyle<span class="year"> - 2016</span><br>
+			<a href="http://www.ust.hk/presidents_cup/introduction.html">HKUST</a> | Semi-Finalist of President's Cup<span class="year"> - 2016</span><br>
+			<a href="http://southcentralscholars.org/">South Central Scholars</a> | Scholar<span class="year"> - 2013 ~ 2016</span>
 			<br>
 		</div>
 		</div><br><br>
