--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 			<h3>Hello World!</h3>
 
 			<div id="text">
-			I'm Jenny Huang! I'm a Computer Science student at <a href="https://www.smith.edu/">Smith College</a>. <br>I love coding, and am a total foodie. Feel free to send me an email about coding, food, or anything else!
+			I'm Jenny Huang! I'm a Computer Science student at <a href="https://www.smith.edu/">Smith College</a>. <br>I love coding, and I am a total foodie. Feel free to send me an email about coding, food, or anything else!
 		</div>
 		</div>
 
