--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 	<script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
 
 	<!-- Fonts -->
-	<link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Quicksand' rel='stylesheet' type='text/css'>
 	<link href='https://fonts.googleapis.com/css?family=Abel' rel='stylesheet' type='text/css'>
 
 	</head>
@@ -39,7 +39,7 @@
         	<i class="fa fa-lg fa-envelope-o" aria-hidden="true"></i></a>
         <a class="icon" href="http://linkedin.com/in/jennyhuang24">
 			<i class="fa fa-lg fa-linkedin-square" aria-hidden="true"></i></a>
-        <a class="icon" href="http://huangjenny.github.io/website/JennyHuang_Resume_GH.pdf">
+        <a class="icon" href="http://huangjenny.github.io/website/resume.pdf">
         	<i class="fa fa-lg fa-file-o" aria-hidden="true"></i></a>
         </div>
 
@@ -71,7 +71,7 @@
 		</div>
 
 		<div id="section">
-			<h3>Honors</h3>
+			<h3>Awards</h3>
 
 			<div id="text">
 			<a href="http://ghc.anitaborg.org/2016-student-academic/scholarships/2016-ghc-scholars/attachment/jenny-huang/">Anita Borg Institute</a> | Grace Hopper Scholar<span class="year"> - 2016</span><br>
