--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	<link rel="icon" href="favicon.png">
 	
 	<!-- Bootstrap core CSS -->
-	<link href="assets/css/bootstrap.css" rel="stylesheet">
+	<link href="css/bootstrap.css" rel="stylesheet">
 
 	<!-- CSS -->
 	<link href="css/main.css" rel="stylesheet">
@@ -39,8 +39,6 @@
         	<i class="fa fa-lg fa-envelope-o" aria-hidden="true"></i></a>
         <a class="icon" href="http://linkedin.com/in/jennyhuang24">
 			<i class="fa fa-lg fa-linkedin-square" aria-hidden="true"></i></a>
-        <a class="icon" href="http://huangjenny.github.io/website/resume.pdf">
-        	<i class="fa fa-lg fa-file-o" aria-hidden="true"></i></a>
         </div>
 
         <div id="section">
@@ -54,7 +52,7 @@
 		<div id="section">
 			<h3>Work</h3>
 			<div id="text">
-			<a href="https://www.smith.edu/its/ets/media.php">Smith College CMP</a> | Student Consultant<span class="year"> - 2014 ~ 2015, 2016</span><br>
+			<a href="https://www.smith.edu/its/ets/media.php">Smith College CMP</a> | Student Consultant<span class="year"> - 2014 ~ 2015, 2016 ~ 2017</span><br>
 			<a href="https://www.idtech.com/">iD Tech Camps</a> | Instructor<span class="year"> - 2016</span><br>
 			<a href="http://flashstarts.tumblr.com/post/124860814840/meet-an-intern-jenny-huang">Flashstarts</a> | Software Development Intern<span class="year"> - 2015</span>
 		</div>
@@ -64,8 +62,9 @@
 			<h3>Things I Do</h3>
 
 			<div id="text">
-			<a href="http://alumnae.smith.edu/volunteer/volunteer/student-ambassador-program/">Smith College</a> | Student Ambassador<span class="year"> - 2016</span><br>
-			<a href="https://www.smith.edu/aemes/about_peer.php">AEMES STEM Peer Mentoring</a> | Mentor<span class="year">- 2013 ~ 2015</span><br>
+			<a href="https://msdn.microsoft.com/en-us/microsoftstudentpartners.aspx">Microsoft</a> | Student Partner <span class="year"> - 2017</span><br>
+			<a href="http://alumnae.smith.edu/volunteer/volunteer/student-ambassador-program/">Smith College</a> | Student Ambassador<span class="year"> - 2016 ~ 2017</span><br>
+			<a href="https://www.smith.edu/aemes/about_peer.php">AEMES STEM Peer Mentoring</a> | Mentor<span class="year"> - 2013 ~ 2015</span><br>
 			<a href="http://www.homeworkhouseholyoke.org/">Homework House</a> | Tutor<span class="year"> - 2013 ~ 2014</span>
 		</div>
 		</div>
@@ -77,7 +76,7 @@
 			<a href="http://ghc.anitaborg.org/2016-student-academic/scholarships/2016-ghc-scholars/attachment/jenny-huang/">Anita Borg Institute</a> | Grace Hopper Scholar<span class="year"> - 2016</span><br>
 			<a href="http://hack.ust.hk/hack2016/index.html">USTHacks</a> | 1st Place of BEA App for Lifestyle<span class="year"> - 2016</span><br>
 			<a href="http://www.ust.hk/presidents_cup/introduction.html">HKUST</a> | Semi-Finalist of President's Cup<span class="year"> - 2016</span><br>
-			<a href="http://southcentralscholars.org/">South Central Scholars</a> | Scholar<span class="year"> - 2013 ~ 2016</span>
+			<a href="http://southcentralscholars.org/">South Central Scholars</a> | Scholar<span class="year"> - 2013 ~ 2017</span>
 			<br>
 		</div>
 		</div><br><br>
