--- a/index.html
+++ b/index.html
@@ -14,13 +14,11 @@
 
 	<!-- Favicon -->
 	<link rel="icon" href="favicon.png">
-	
-	<!-- Bootstrap core CSS -->
-	<link href="css/bootstrap.css" rel="stylesheet">
 
 	<!-- CSS -->
 	<link href="css/main.css" rel="stylesheet">
 	<link href="font-awesome/css/font-awesome.min.css" rel="stylesheet">
+	<link href="css/animate.css" rel="stylesheet">
 
 	<!-- jQuery -->
 	<script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
@@ -32,8 +30,8 @@
 	</head>
 
 	<body>
-		<div id="photo"><img id="pic" src="http://huangjenny.github.io/website/JennyHuang.jpg"></div>
 		<div id="title">JENNY HUANG</div>
+		<h3 id="tagline">Software Engineer in Los Angeles</h3>
 		<div id="icons">
         <a class="icon" href="mailto:jnnyhng@gmail.com">
         	<i class="fa fa-lg fa-envelope-o" aria-hidden="true"></i></a>
@@ -42,44 +40,8 @@
         </div>
 
         <div id="section">
-			<h3>Hello World!</h3>
-
-			<div id="text">
-			I'm Jenny Huang! I'm a Computer Science student at <a href="https://www.smith.edu/">Smith College</a>. <br>I love coding, and I am a total foodie. Feel free to send me an email about coding, food, or anything else!
+			<div id="text"><i>site currently under construction</i></div>
 		</div>
-		</div>
-
-		<div id="section">
-			<h3>Work</h3>
-			<div id="text">
-			<a href="https://www.smith.edu/its/ets/media.php">Smith College CMP</a> | Student Consultant<span class="year"> - 2014 ~ 2015, 2016 ~ 2017</span><br>
-			<a href="https://www.idtech.com/">iD Tech Camps</a> | Instructor<span class="year"> - 2016</span><br>
-			<a href="http://flashstarts.tumblr.com/post/124860814840/meet-an-intern-jenny-huang">Flashstarts</a> | Software Development Intern<span class="year"> - 2015</span>
-		</div>
-		</div>
-
-		<div id="section">
-			<h3>Things I Do</h3>
-
-			<div id="text">
-			<a href="https://msdn.microsoft.com/en-us/microsoftstudentpartners.aspx">Microsoft</a> | Student Partner <span class="year"> - 2017</span><br>
-			<a href="http://alumnae.smith.edu/volunteer/volunteer/student-ambassador-program/">Smith College</a> | Student Ambassador<span class="year"> - 2016 ~ 2017</span><br>
-			<a href="https://www.smith.edu/aemes/about_peer.php">AEMES STEM Peer Mentoring</a> | Mentor<span class="year"> - 2013 ~ 2015</span><br>
-			<a href="http://www.homeworkhouseholyoke.org/">Homework House</a> | Tutor<span class="year"> - 2013 ~ 2014</span>
-		</div>
-		</div>
-
-		<div id="section">
-			<h3>Awards</h3>
-
-			<div id="text">
-			<a href="http://ghc.anitaborg.org/2016-student-academic/scholarships/2016-ghc-scholars/attachment/jenny-huang/">Anita Borg Institute</a> | Grace Hopper Scholar<span class="year"> - 2016</span><br>
-			<a href="http://hack.ust.hk/hack2016/index.html">USTHacks</a> | 1st Place of BEA App for Lifestyle<span class="year"> - 2016</span><br>
-			<a href="http://www.ust.hk/presidents_cup/introduction.html">HKUST</a> | Semi-Finalist of President's Cup<span class="year"> - 2016</span><br>
-			<a href="http://southcentralscholars.org/">South Central Scholars</a> | Scholar<span class="year"> - 2013 ~ 2017</span>
-			<br>
-		</div>
-		</div><br><br>
 
 
 	</body>
