--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="description" content="I'm Jenny Huang. I'm a Computer Science Student at Smith College.">
+	<meta name="description" content="I'm Jenny Huang. I'm a Software Engineer at Avanade.">
 	<meta name="author" content="Jenny Huang">
 
 	<title>Jenny Huang</title>
@@ -30,20 +30,28 @@
 	</head>
 
 	<body>
-		<div id="title">JENNY HUANG</div>
-		<h3 id="tagline">Software Engineer in Los Angeles</h3>
+		<h1>JENNY HUANG</h1>
+		<h2>boba connoisseur, puppy enthusiast, & software engineer</h2>
+		<br>
+        <div id="text">
+			Hi, I'm Jenny. I'm a Software Engineer at Avanade in Los Angeles.
+		</div>
+		<br>
+		<div id="text">
+			When I'm not programming, I enjoy long walks to the refrigerator and overanalyzing every episode of Black Mirror.
+		</div>
+		<br>
+		<div id="text">
+		I contaminate other parts of the internet:
 		<div id="icons">
         <a class="icon" href="mailto:jnnyhng@gmail.com">
-        	<i class="fa fa-lg fa-envelope-o" aria-hidden="true"></i></a>
+        	<i class="fa fa-lg fa-envelope-o" aria-hidden="true"></i>
+        </a>
         <a class="icon" href="http://linkedin.com/in/jennyhuang24">
-			<i class="fa fa-lg fa-linkedin-square" aria-hidden="true"></i></a>
-        </div>
-
-        <div id="section">
-			<div id="text"><i>site currently under construction</i></div>
+			<i class="fa fa-lg fa-linkedin-square" aria-hidden="true"></i>
+		</a>
 		</div>
-
-
+	</div>
 	</body>
 
 </html>
