--- a/index.html
+++ b/index.html
@@ -30,29 +30,33 @@
 	</head>
 
 	<body>
-		<h1>JENNY HUANG</h1>
-		<h2>boba connoisseur, puppy enthusiast, & software engineer</h2>
-		<br>
+		<div id="contain">
+			<h1>JENNY HUANG</h1>
+			<h2>techie and foodie</h2>
+			<br>
+	        <div id="text">
+				Hi, I'm Jenny. I'm a Software Engineer at Avanade in Los Angeles.
+			</div>
+			<br>
+			<div id="text">
+				When I'm not programming, I enjoy impromptu taco runs and long walks to the refrigerator.
+			</div>
+			<br>
 
-        <div id="text">
-			Hi, I'm Jenny. I'm a Software Engineer at Avanade in Los Angeles.
-		</div>
-		<br>
-		<div id="text">
-			When I'm not programming, I enjoy long walks to the refrigerator and overanalyzing every episode of Black Mirror.
-		</div>
-		<br>
-		<div id="text">
-			I contaminate other parts of the internet:
-		</div>
-
-		<div id="icons">
-	        <a class="icon" href="mailto:jnnyhng@gmail.com">
-	        	<i class="fa fa-lg fa-envelope-o" aria-hidden="true"></i>
-	        </a>
-	        <a class="icon" href="http://linkedin.com/in/jennyhuang24">
-				<i class="fa fa-lg fa-linkedin-square" aria-hidden="true"></i>
-			</a>
+			<div id="text">
+				I contaminate other parts of the internet:
+			<div id="icons">
+		        <a class="icon" href="mailto:jnnyhng@gmail.com">
+		        	<i class="fa fa-lg fa-envelope-o" aria-hidden="true"></i>
+		        </a>
+		        <a class="icon" href="https://linkedin.com/in/jennyhuang24">
+					<i class="fa fa-lg fa-linkedin-square" aria-hidden="true"></i>
+				</a>
+				<a class="icon" href="https://jennny.yelp.com ">
+					<i class="fa fa-yelp" aria-hidden="true"></i>
+				</a>
+			</div>
+			</div>
 		</div>
 	</body>
 
