update description and links to open in a new tab

--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
 
 	<body>
 		<div id="contain">
-			<h1>JENNY HUANG</h1>
+			<h1 class="animated fadeInDown">JENNY HUANG</h1>
 			<h2>techie and foodie</h2>
 			<br>
 	        <div id="text">
-				Hi, I'm Jenny. I'm a Software Engineer at Avanade in Los Angeles.
+				Hi, I'm Jenny. I'm a Software Developer at Avanade in Los Angeles.
 			</div>
 			<br>
 			<div id="text">
@@ -46,13 +46,13 @@
 			<div id="text">
 				I contaminate other parts of the internet:
 			<div id="icons">
-		        <a class="icon" href="mailto:jnnyhng@gmail.com">
+		        <a class="icon" href="mailto:jnnyhng@gmail.com" target="_blank">
 		        	<i class="fa fa-lg fa-envelope-o" aria-hidden="true"></i>
 		        </a>
-		        <a class="icon" href="https://linkedin.com/in/jennyhuang24">
+		        <a class="icon" href="https://linkedin.com/in/jennyhuang24" target="_blank">
 					<i class="fa fa-lg fa-linkedin-square" aria-hidden="true"></i>
 				</a>
-				<a class="icon" href="https://jennny.yelp.com ">
+				<a class="icon" href="https://jennny.yelp.com" target="_blank">
 					<i class="fa fa-yelp" aria-hidden="true"></i>
 				</a>
 			</div>
